# FoxBot

./: .gitignore  .gitmodules  .toxicfox.json  CMakeLists.txt  Dockerfile  dependency-reduced-pom.xml  docker-compose.yml  keystore.sh  pom.xml  start.sh
.glowman554/: build.sh  deploy.sh  undeploy.sh
compiler/: Dockerfile  main.go
compiler/api/: compile.go  run.go
compiler/utils/: compiler.go  execute.go  jail.go
frontend/: .prettierrc.mjs  README.md  astro.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.mjs
frontend/public/res/fonts/jetbrains_mono/: font.css
frontend/src/: environment.ts  validatedFetch.ts
frontend/src/app/: global.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/commands/: page.tsx
frontend/src/app/shell/: page.tsx
frontend/src/app/usage/: page.tsx
frontend/src/components/: CommandHelp.tsx  Commands.tsx  Footer.tsx  Header.tsx  Layout.astro  Navigation.tsx  SchemaCommand.tsx  Shell.tsx  Statistics.tsx  Stats.tsx  Time.tsx  UsageChart.tsx
frontend/src/components/chat/: ChatEntry.tsx  SchemaCommandContainer.tsx  UploadButton.tsx  WebChat.tsx  types.ts
frontend/src/pages/: 404.astro  commands.astro  index.astro  shell.astro  usage.astro
frontend/src/styles/: global.css
include/core/: client_command_handler.h  client_handler.h  command.h  core.h
include/core/platform/: discord_client_command_handler.h  discord_client_handler.h
include/plugin/: plugin.h
include/utils/: config.h  list.h  utils.h
plugins/: CMakeLists.txt
plugins/discord/: CMakeLists.txt  discord_client_command_handler.cpp  discord_client_handler.cpp  main.cpp
plugins/discord/include/: discord_client_handler.h
plugins/telegram/: CMakeLists.txt  main.cpp  telegram_client_command_handler.cpp  telegram_client_handler.cpp
plugins/telegram/include/: telegram_client_command_handler.h  telegram_client_handler.h
plugins/test/: CMakeLists.txt  main.cpp
plugins/util_commands/: CMakeLists.txt  help_command.cpp  main.cpp  say_command.cpp  whoami_command.cpp
plugins/util_commands/include/: help_command.h  say_command.h  whoami_command.h
src/: main.cpp
src/core/: client_command_handler.cpp  command.cpp  core.cpp
src/core/platform/: discord_client_command_handler.cpp  discord_client_handler.cpp
src/main/java/de/glowman554/bot/: Feature.java  Main.java  Platform.java  Test.java
src/main/java/de/glowman554/bot/api/: Api.java  HelpApiEndpoint.java  HelpEndpoint.java  StatsApiEndpoint.java  StatsEndpoint.java  UsageApiEndpoint.java  UsageEndpoint.java
src/main/java/de/glowman554/bot/command/: Attachment.java  Command.java  CommandContext.java  CommandManager.java  (+13 more)
src/main/resources/: plugin.json
src/plugin/: plugin.cpp
src/utils/: config.cpp  utils.cpp
(+136 files in other folders)
